[tool.poetry]
name = "test-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Jonatas Oliveira <contact@jonatasoliveira.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.29"
pydantic = "^2.6.4"
alembic = "^1.13.1"
pyright = "^1.1.356"
psycopg2-binary = "^2.9.9"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
